[수정] 파일 구조 변경

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <title>Calculator</title>
         <meta charset="utf-8"/>
-        <link  type="text/css" rel="stylesheet" href="calculator/calculator.css">
-        <script type="text/javascript" src="calculator/calculator.js"></script>
+        <link  type="text/css" rel="stylesheet" href="calculator/css/calculator.css">
+        <script type="text/javascript" src="calculator/core/calculator.js"></script>
+        <script type="text/javascript" src="calculator/core/calcView.js"></script>
+        <script type="text/javascript" src="calculator/core/calcViewModel.js"></script>
         <script type="text/javascript" src="calculator/calculatorTemplate.js"></script>
-        <script type="text/javascript" src="calculator/calcView.js"></script>
-        <script type="text/javascript" src="calculator/calcViewModel.js"></script>
         <script type="text/javascript" src="calculator/calcOperator.js"></script>
     </head>
     <body>
